Changes in 2.4.0
  o Issue 39955: Fix for labkey.saveBatch issue with using GET instead of POST for query to get assay Id from assay name
  o Issue 39955: Add batchPropertyList parameter to labkey.experiment.saveBatch to match behavior from deprecated labkey.saveBatch

Changes in 2.3.5
  o Add support for uploading runs for GPAT assays that support plate template metadata via labkey.experiment.createRun and labkey.experiment.saveBatch.

Changes in 2.3.4
  o Issue 38229: Handle newlines better in transform run properties files - run properties configured as multi-line types
  o Issue 39262: Add support for using username/password authentication via labkey.setDefaults
  o Remove outdated vignette and other doc files from package

Changes in version 2.3.3
  o Issue 38841: Rlabkey needs to translate NULL to NA for new GWTDomain "instructions" property

Changes in version 2.3.2
  o Fix typo in labkey.webdav.put for generated Rlabkey.pdf (Issue 37739)
  o Issue 38427: In Rlabkey, labkey.selectRows with colNameOpt="rname" does not sanitize "::"
  o Item 6165: New API for truncating tables (delete all rows)
  o Item 6174: New API for labkey.experiment.saveRuns (similar to saveBatch API usage)

Changes in version 2.3.1
  o Fix for makeFilter URLencode to use reserved = TRUE
  o When using labkey.selectRows, default showHidden to TRUE when using colSelect property

Changes in version 2.3.0
  o WebDav support in Rlabkey with functions like labkey.webdav.get, labkey.webdav.put, labkey.webdav.delete, etc. (from Ben Bimber)

Changes in version 2.2.5
  o Issue 36894: labkey.domain.get fix to translate NULL values for string props to NA
  o Issue 36837: correctly parse GROUP CONCAT response with array of string values

Changes in version 2.2.4
  o New function to set and get module properties
  o allow getting baseUrl using labkey.getBaseUrl
  o allow NA translation behavior to be overridden in insertRows and importRows

Changes in version 2.2.3