@@ -75,6 +75,7 @@ A list containing the newly uploaded data frame rows.
 \code{\link{labkey.domain.get}},
 \code{\link{labkey.domain.inferFields}},
 \code{\link{labkey.domain.createDesign}},
+\code{\link{labkey.domain.createIndices}},
 \code{\link{labkey.domain.save}},
 \code{\link{labkey.domain.drop}}
 }
