@@ -23,6 +23,7 @@ A list containing elements describing the domain after the update. The structure
 \code{\link{labkey.domain.get}},
 \code{\link{labkey.domain.inferFields}},
 \code{\link{labkey.domain.createDesign}},
+\code{\link{labkey.domain.createIndices}},
 \code{\link{labkey.domain.create}},
 \code{\link{labkey.domain.drop}}
 }
